5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1712_2505.log
== SUBMITION (2019-05-15 13:29:59) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- EXECUTION TIME:
0.174616
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2505/main.py", line 2, in <module>
    num = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:30:25) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
if (num % 2 == 0):
	mensagem = "PAR"
else:
	mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))

	
-- EXECUTION TIME:
0.206825
-- ERROR:
  File "/home/codebench/codes/1712/2505/main.py", line 7
    if (num % 2 == 0):
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:30:27) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
if (num % 2 == 0):
	mensagem = "PAR"
else:
	mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))

	
-- EXECUTION TIME:
0.163263
-- ERROR:
  File "/home/codebench/codes/1712/2505/main.py", line 7
    if (num % 2 == 0):
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:31:15) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- EXECUTION TIME:
0.1602
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2505/main.py", line 2, in <module>
    num = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:31:17) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    num = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:39:48) 
-- CODE:
from math import*
x = eval(input("angulo x:"))
k = int(input("numero k: "))
e = 0
d = 1
c= 0
aux = 1
while(c<k):
	e = e + (aux * ((x**d)/ factorial(d)))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c+1
	d = d+2
print(round(e, 10))

	
-- EXECUTION TIME:
0.130938
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
